# SteelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
engine/: CMakeLists.txt
engine/include/: test.hpp
engine/include/se/: application.hpp  application.inl  assert.hpp  component.hpp  component.inl  core.hpp  engine.hpp  entity.hpp  entity.inl  entryPoint.inl  event.hpp  eventListener.hpp  eventListener.inl  eventManager.hpp  eventManager.inl  graphicsApi.hpp  layer.hpp  layer.inl  logger.hpp  logger.inl  logging.hpp  logging.inl  origin.hpp  registry.hpp  registry.inl  require.hpp  status.hpp  test.hpp  time.hpp  types.hpp  uuid.hpp  uuid.inl  work.hpp  work.inl  workManager.hpp
engine/include/se/components/: root.hpp  root.inl  script.hpp  script.inl
engine/include/se/config/: config.hpp
engine/include/se/designPattern/: singleton.hpp  singleton.inl
engine/include/se/essentials/: assertion.hpp  assertion.inl  dynamicList.hpp  exception.hpp  intTypes.hpp  map.hpp  string.hpp  string.inl
engine/include/se/event/: event.hpp  eventManager.hpp  eventManager.inl  listener.hpp  listener.inl
engine/include/se/input/: SDL2inputManager.hpp  inputManager.hpp  type.hpp
engine/include/se/math/: matn.hpp  matn.inl  matrix.hpp  matrix.inl  operation.hpp  operation.inl  quaternion.hpp  quaternion.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl  vector.hpp  vector.inl
engine/include/se/memory/: heapAllocator.hpp  heapAllocator.inl  poolAllocator.hpp  poolAllocator.inl  stackAllocator.hpp  stackAllocator.inl
engine/include/se/utils/: assert.hpp  assert.inl  convert.hpp  endianness.hpp  endianness.inl  hash.hpp  iterator.hpp  string.hpp  string.inl
engine/include/se/window/: SDL2window.hpp  window.hpp  window.inl  windowManager.hpp  windowManager.inl
engine/src/: application.cpp  engine.cpp  entity.cpp  eventListener.cpp  eventManager.cpp  graphicsApi.cpp  layer.cpp  logger.cpp  logging.cpp  origin.cpp  registry.cpp  test.cpp  uuid.cpp  workManager.cpp
engine/src/essentials/: assertion.cpp  exception.cpp  string.cpp
engine/src/event/: eventManager.cpp  listener.cpp
engine/src/input/: SDL2inputManager.cpp
engine/src/memory/: heapAllocator.cpp  stackAllocator.cpp
engine/src/utils/: convert.cpp  hash.cpp  string.cpp
engine/src/window/: SDL2window.cpp  window.cpp  windowManager.cpp
lib/: CMakeLists.txt
lib/include/glad/: glad.h
lib/include/se/: application.hpp  assertion.hpp  concepts.hpp  core.hpp  duration.hpp  duration.inl  engine.hpp  entryPoint.inl  exceptions.hpp  logger.hpp  logger.inl  math.hpp  resourceManager.hpp  resourceManager.inl  steelEngine.hpp  types.hpp  units.hpp  uuid.hpp
lib/include/se/ecs/: scene.hpp
lib/include/se/input/: inputManager.hpp
lib/include/se/memory/: allocator.hpp  poolAllocator.hpp  poolAllocator.inl
lib/include/se/renderer/: attributeBufferView.hpp  buffer.hpp  bufferViewUsage.hpp  context.hpp  depthBuffer.hpp  format.hpp  gpuType.hpp  graphicsApi.hpp  imageBuffer.hpp  pipeline.hpp  rangeBufferView.hpp  renderPass.hpp  renderer.hpp  shader.hpp  storageBufferView.hpp  uniformBufferView.hpp  vertexBufferView.hpp  vramAllocator.hpp
lib/include/se/renderer/opengl/: context.hpp  vramAllocator.hpp
lib/include/se/renderer/vulkan/: attributeBufferView.hpp  buffer.hpp  bufferViewUsage.hpp  commandBuffer.hpp  context.hpp  depthBuffer.hpp  device.hpp  format.hpp  imageBuffer.hpp  imageLayoutTransfer.hpp  pipeline.hpp  rangeBufferView.hpp  renderPass.hpp  shader.hpp  surface.hpp  swapChain.hpp  swapchain.hpp  synchronisation.hpp  uniformBufferView.hpp  vertexBufferView.hpp  vramAllocator.hpp
lib/include/se/threads/: job.hpp  job.inl  jobInfos.hpp  jobScheduler.hpp  jobScheduler.inl  thread.hpp  thread.inl  work.hpp
lib/include/se/utils/: bitField.hpp  byteSize.hpp  byteSize.inl  converter.hpp  converter.inl  files.hpp  template.hpp  template.inl  version.hpp  version.inl
lib/include/se/window/: input.hpp  input.inl  window.hpp  window.inl  windowManager.hpp
lib/src/: allocator.cpp  application.cpp  engine.cpp  exceptions.cpp  logger.cpp  resourceManager.cpp  uuid.cpp
lib/src/glad/src/: glad.c
lib/src/input/: inputManager.cpp
lib/src/renderer/: renderer.cpp
lib/src/renderer/opengl/: context.cpp  vramAllocator.cpp
lib/src/renderer/vulkan/: attributeBufferView.cpp  buffer.cpp  bufferViewUsage.cpp  commandBuffer.cpp  context.cpp  depthBuffer.cpp  device.cpp  format.cpp  imageBuffer.cpp  imageLayoutTransfer.cpp  pipeline.cpp  rangeBufferView.cpp  renderPass.cpp  shader.cpp  surface.cpp  swapChain.cpp  swapchain.cpp  synchronisation.cpp  uniformBufferView.cpp  vertexBufferView.cpp  vramAllocator.cpp
lib/src/threads/: jobScheduler.cpp  thread.cpp
lib/src/utils/: files.cpp
lib/src/window/: input.cpp  window.cpp  windowManager.cpp
sandbox/: CMakeLists.txt
sandbox/src/: app.cpp  main.cpp
scripts/: build.py  copy.py  dependencies.py  generateKeys.py  test.py
shaders/: test.comp  test.comp.spv  test.frag  test.frag.spv  test.geom  test.geom.spv  test.vert  test.vert.spv
tests/: CMakeLists.txt
tests/include/: string.inl  test.hpp  vector.inl
tests/src/: main.cpp
tests/src/utils/: version.cpp
